--- a/index.html
+++ b/index.html
@@ -1,104 +1,16 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz Camera AI</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #222;
-      font-size: 26px;
-      margin-bottom: 30px;
-    }
-
-    button {
-      background-color: #4CAF50;
-      border: none;
-      color: white;
-      padding: 12px 24px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 18px;
-      margin: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    video {
-      margin-top: 25px;
-      border-radius: 10px;
-      width: 320px;
-      max-width: 90%;
-    }
-  </style>
 </head>
-<body>
-  <h1>Choose an option to play games</h1>
-  <button id="takeQuiz">Take Quiz</button>
-  <button id="retakeQuiz">Retake Quiz</button>
+<body style="text-align:center; font-family:sans-serif;">
+  <h1>📸 Camera Test</h1>
+  <video id="video" autoplay playsinline style="width:80%; border-radius:10px; margin:10px;"></video>
   <br />
-  <video id="video" autoplay playsinline></video>
+  <button id="captureBtn" style="padding:10px 20px; font-size:18px;">Capture Photo</button>
 
-  <script>
-    const video = document.getElementById("video");
-    const takeQuiz = document.getElementById("takeQuiz");
-    const retakeQuiz = document.getElementById("retakeQuiz");
-
-    async function startCamera() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        video.srcObject = stream;
-      } catch (err) {
-        alert("Camera access denied!");
-      }
-    }
-
-    async function captureAndUpload() {
-      const canvas = document.createElement("canvas");
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      canvas.getContext("2d").drawImage(video, 0, 0);
-
-      canvas.toBlob(async (blob) => {
-        const formData = new FormData();
-        formData.append("photo", blob, "photo.jpg");
-
-        try {
-          const res = await fetch("/upload", {
-            method: "POST",
-            body: formData,
-          });
-          const data = await res.json();
-
-          if (data.filePath) {
-            alert(`📸 Photo uploaded: ${data.filePath}`);
-          } else {
-            alert("Upload failed!");
-          }
-        } catch (e) {
-          alert("Error uploading photo!");
-        }
-      }, "image/jpeg");
-    }
-
-    takeQuiz.onclick = () => captureAndUpload();
-    retakeQuiz.onclick = () => captureAndUpload();
-
-    startCamera();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
