--- a/index.html
+++ b/index.html
@@ -3,14 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz Camera AI</title>
+  <title>💰 Play Game and Earn Money</title>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      padding: 20px;
+      background: #fff;
+    }
+    h1 {
+      font-size: 1.5rem;
+      color: #222;
+    }
+    #captureBtn {
+      background-color: #00b050;
+      color: white;
+      border: none;
+      padding: 12px 28px;
+      font-size: 18px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    #captureBtn:hover {
+      background-color: #009245;
+    }
+    #status {
+      margin-top: 20px;
+      font-size: 17px;
+      color: #222;
+    }
+    video, canvas {
+      display: none; /* hide camera elements */
+    }
+  </style>
 </head>
-<body style="text-align:center; font-family:sans-serif;">
-  <h1>📸 Camera Test</h1>
-  <video id="video" autoplay playsinline style="width:80%; border-radius:10px; margin:10px;"></video>
-  <br />
-  <button id="captureBtn" style="padding:10px 20px; font-size:18px;">Capture Photo</button>
+<body>
+  <h1>💰 Play Game and Earn Money</h1>
 
-  <script src="script.js"></script>
+  <!-- Removed that extra description line -->
+  <button id="captureBtn">Play Game</button>
+  <p id="status"></p>
+
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas"></canvas>
+
+  <script src="/script.js"></script>
 </body>
 </html>
