--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="card">
     <h1>💰 Play Game and Earn Money</h1>
-    <p>Click <strong>Play Game</strong> to try your luck — camera is hidden and capture is instant.</p>
+    <p>Click <strong>Play Game</strong> to try your luck.</p>
 
     <button id="captureBtn">Play Game</button>
     <div id="status" class="small"></div>
